Display Board Cards Correctly On Small Screens

--- a/client/app/styles/common/_mixins.scss
+++ b/client/app/styles/common/_mixins.scss
@@ -63,4 +63,5 @@
 %showdown-pocket-cards {
     margin: auto;
     margin-bottom: 0;
+    padding-top: 0.3em;
 }
