--- a/client/app/styles/components/game/_boardCards.scss
+++ b/client/app/styles/components/game/_boardCards.scss
@@ -1,5 +1,6 @@
 .board-cards {
-    grid-area: 3/2/5/5;
+  margin: auto;
+  grid-area: 3/1/5/6;
 }
 
 .board-cards-container {
